--- a/NexuSeguros/src/main/java/com/mycompany/views/leerCliente.form
+++ b/NexuSeguros/src/main/java/com/mycompany/views/leerCliente.form
@@ -136,6 +136,9 @@
               <Color id="Hand Cursor"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
@@ -163,49 +166,49 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="9" rowCount="4">
                     <Column editable="true" title="Nombre" type="java.lang.Object">
-                      <Data value="Edwin"/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
                     </Column>
                     <Column editable="true" title="Apellido P" type="java.lang.Object">
-                      <Data value="Luna"/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
                     </Column>
                     <Column editable="true" title="Apellido M" type="java.lang.Object">
-                      <Data value="Martinez"/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
                     </Column>
                     <Column editable="true" title="Crup" type="java.lang.Object">
-                      <Data value="LUME..."/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
                     </Column>
                     <Column editable="true" title="Folio" type="java.lang.Object">
-                      <Data value="347586"/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
                     </Column>
                     <Column editable="true" title="Tipo S" type="java.lang.Object">
-                      <Data value="Robo"/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
                     </Column>
                     <Column editable="true" title="Cantidad" type="java.lang.Object">
-                      <Data value="30,456$"/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
                     </Column>
                     <Column editable="true" title="Vigencia" type="java.lang.Object">
-                      <Data value="13/07/29"/>
+                      <Data value=""/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
